# sources

./: .gitignore  Makefile  calculator.c  functions.c
WIN32-MingW/: .cproject  .project  dummy.c  main.c
calculator/: CMakeLists.txt  Makefile  README.md  calculator.c  functions.c  functions.h  test.c
esp1/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp1/components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h  wifi_connect_err.c  wifi_connect_error.c
esp1/main/: CMakeLists.txt  NTPclient.c  beacon.c  bleClient.c  bleGATT.c  bleGap.c  blePeripheral.c  ble_wifi.c  ble_wifi.h  const.h  cui.c  esp_http_client.c  evtgroup.c  freertosBinarySemmhr.c  freertosQueue.c  freertosTaskNotification.c  freertosTimer.c  gpioDAC.c  gpioOutput.c  i2c.c  main.c  max30100.c  notify.c  rest.c  text.c  text.h  timers.c  uartQueue.c  wav_to_c.py  wifiInit.c  wifi_connect.c  wifi_connect.h  wifi_init.c
esp1/main/archive/: binsemaphore.c  bleGATT.c  eddyStone.c  freertosEventGroups.c  freertosMutex.c  freertosTimer.c  gpioADC.c  gpioInterrupt.c  gpioPWM.c  inputt.c  led.c  ledd.c  main.c  mutex.c  neopixel.c  ntp_client.c  queue.c  uartEcho.c  ultraSonic.c  wifiConnect.c  wifiInit.c  wifiScanner.c  wifi_http.c  wifi_scanner.c
esp1/main/archive/iksoks/: iksoks.c
esp1/main/ginglebell/: wav2code.c
esp1/main/iksoks/: input.c  players.c
filemanager/: .gitignore  CMakeLists.txt  main.c
filemanager/compressor/: .gitignore  CMakeLists.txt  decompressedData.json  input.c  input.h
filemanager/json/: CMakeLists.txt  main.c  parttwo.c
pipeline_play_sdcard_music/: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
pipeline_play_sdcard_music/main/: CMakeLists.txt  main.c  main_anica.c  play_sdcard_music_example.c  play_sdcard_music_example.h  station_example_main.c  text.h  wifi_connect.c
project-name/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
project-name/main/: blecent.h  main.c
radio/radio/: wav_to_c.py
radio2/: CMakeLists.txt
tictactoe/: CMakeLists.txt  computer.c  const.h  cui.c  iksoks.c  input.c  players.c
tictactoe9x9/: .gitignore  CMakeLists.txt  constants.h  input.c  instruction.c  ninexnine.c
wifi_bt_ble_coex/: README.md
